# KAN

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python_ci.yml
src/: extractor.py
tests/: mocks.py  test_extractor.py  test_initial.py
