[project]
name = "kan"
version = "0.1.0"
description = "Kevin's Accounts aNalyzer"
authors = [
    {name = "Kevin Zeledon",email = "kzeledon@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-pyright (>=0.0.6,<0.0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src"]  # Esto permite imports directos en tests
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"

[pytest]
mock_use_standalone_module = true

